# rts-align

./: .gitignore  LICENSE  README.md  count_combi.py  image_example.py  image_test.sh  json_example.py  pyproject.toml  setup.py  tiny_example.py  toy_example.py  triangle.py  viz_image.py  viz_points.py
examples/: check_points.py  check_twice.py  compare_sim_eps.py  compare_sim_eps_3d.py  compare_sim_points.py  compare_sim_points_3d.py  compare_sim_points_nd.py  sc_extract.py  shoecomp.py  shoecomp_multi.py  sim_points_csv.py  try_opti.py
src/rts_align/: __init__.py  clq.py  shoecomp.py
src/rts_align/core/: builder.h  builder3.cpp  builder3_2d.cpp  builder3_3d.cpp  builder_gen.cpp  wrapper.cpp
src/rts_align/transforms/: __init__.py  _utils.py  _utils_opt.py  affine.py  kabsch.py  thinplate.py
triples/: builder3.cpp  tr_gimme.cpp
visualize/: anim_points.py  basic_graph.py  graph_2d.py  graph_rts.py  mpl_texconfig.py  outliers_2d.py  pts_2d.py  viz_image.py  viz_points.py
