[build-system]
requires = ["setuptools>=61.0", "numpy>=1.14", "pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rts_align"
dependencies = ["numpy>=1.14", "pybind11>=2.2", "cliquematch>=3.0.0"]
version = "0.0.1"
license = {file = "LICENSE"}
authors = [
  { name="Gautham Venkatasubramanian" },
]
description="Align point clouds that differ in rotation, translation, and scale"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
